--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -17,7 +17,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/theme/favicon.svg">
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/main.css">
-   
+  
+    
     
 </head>
 
@@ -250,16 +251,12 @@
                             <form action="#">
                                 <select class="select-active">
                                     <option>All Categories</option>
-                                    <option>Women's</option>
+                                    <option></option>
                                     <option>Men's</option>
                                     <option>Cellphones</option>
                                     <option>Computer</option>
                                     <option>Electronics</option>
-                                    <option> Accessories</option>
-                                    <option>Home & Garden</option>
-                                    <option>Luggage</option>
-                                    <option>Shoes</option>
-                                    <option>Mother & Kids</option>
+                                 
                                 </select>
                                 <input type="text" placeholder="Search for items...">
                             </form>
@@ -335,8 +332,8 @@
                             <div class="categori-dropdown-wrap categori-dropdown-active-large">
                                 <ul>
                                     <li class="has-children">
-                                        <a href="shop-grid-right.html"><i class="evara-font-dress"></i>Women's Clothing</a>
-                                        <div class="dropdown-menu">
+                                        <a href="shop-grid-right.html"><i class="evara-font-dress"></i>Cardio Equipment</a>
+                                        <!-- <div class="dropdown-menu">
                                             <ul class="mega-menu d-lg-flex">
                                                 <li class="mega-menu-col col-lg-7">
                                                     <ul class="d-lg-flex">
@@ -348,12 +345,10 @@
                                                                 <li><a class="dropdown-item nav-link nav_item" href="#">Hoodies & Sweatshirts</a></li>
                                                                 <li><a class="dropdown-item nav-link nav_item" href="#">Women's Sets</a></li>
                                                                 <li><a class="dropdown-item nav-link nav_item" href="#">Suits & Blazers</a></li>
-                                                                <li><a class="dropdown-item nav-link nav_item" href="#">Bodysuits</a></li>
-                                                                <li><a class="dropdown-item nav-link nav_item" href="#">Tanks & Camis</a></li>
-                                                                <li><a class="dropdown-item nav-link nav_item" href="#">Coats & Jackets</a></li>
+                                                                
                                                             </ul>
                                                         </li>
-                                                        <li class="mega-menu-col col-lg-6">
+                                                        <!-- <li class="mega-menu-col col-lg-6">
                                                             <ul>
                                                                 <li><span class="submenu-title">Bottoms</span></li>
                                                                 <li><a class="dropdown-item nav-link nav_item" href="#">Leggings</a></li>
@@ -365,10 +360,10 @@
                                                                 <li><a class="dropdown-item nav-link nav_item" href="#">Cover-Ups</a></li>
                                                                 <li><a class="dropdown-item nav-link nav_item" href="#">Swimwear</a></li>
                                                             </ul>
-                                                        </li>
+                                                        </li> 
                                                     </ul>
                                                 </li>
-                                                <li class="mega-menu-col col-lg-5">
+                                                <!-- <li class="mega-menu-col col-lg-5">
                                                     <div class="header-banner2">
                                                         <img src="assets/imgs/banner/menu-banner-2.jpg" alt="menu_banner1">
                                                         <div class="banne_info">
@@ -385,13 +380,13 @@
                                                             <a href="#">Shop now</a>
                                                         </div>
                                                     </div>
-                                                </li>
+                                                </li> 
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </li>
                                     <li class="has-children">
-                                        <a href="shop-grid-right.html"><i class="evara-font-tshirt"></i>Men's Clothing</a>
-                                        <div class="dropdown-menu">
+                                        <a href="shop-grid-right.html"><i class="evara-font-tshirt"></i>Strength Machines</a>
+                                        <!-- <div class="dropdown-menu">
                                             <ul class="mega-menu d-lg-flex">
                                                 <li class="mega-menu-col col-lg-7">
                                                     <ul class="d-lg-flex">
@@ -433,11 +428,11 @@
                                                     </div>
                                                 </li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </li>
                                     <li class="has-children">
-                                        <a href="shop-grid-right.html"><i class="evara-font-smartphone"></i> Cellphones</a>
-                                        <div class="dropdown-menu">
+                                        <a href="shop-grid-right.html"><i class="evara-font-smartphone"></i> Free Weights and Accessories</a>
+                                        <!-- <div class="dropdown-menu">
                                             <ul class="mega-menu d-lg-flex">
                                                 <li class="mega-menu-col col-lg-7">
                                                     <ul class="d-lg-flex">
@@ -488,9 +483,9 @@
                                                     </div>
                                                 </li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </li>
-                                    <li><a href="shop-grid-right.html"><i class="evara-font-desktop"></i>Computer & Office</a></li>
+                                    <!-- <li><a href="shop-grid-right.html"><i class="evara-font-desktop"></i>Computer & Office</a></li>
                                     <li><a href="shop-grid-right.html"><i class="evara-font-cpu"></i>Consumer Electronics</a></li>
                                     <li><a href="shop-grid-right.html"><i class="evara-font-diamond"></i>Jewelry & Accessories</a></li>
                                     <li><a href="shop-grid-right.html"><i class="evara-font-home"></i>Home & Garden</a></li>
@@ -504,7 +499,7 @@
                                             <li><a href="shop-grid-right.html"><i class="evara-font-diamond"></i>Consumer Electronics</a></li>
                                             <li><a href="shop-grid-right.html"><i class="evara-font-home"></i>Automobiles & Motorcycles</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                 </ul>
                                 <div class="more_categories">Show more...</div>
                             </div>
@@ -512,18 +507,18 @@
                         <div class="main-menu main-menu-padding-1 main-menu-lh-2 d-none d-lg-block">
                             <nav>
                                 <ul>
-                                    <li><a class="active" href="index.html">Home <i class="fi-rs-angle-down"></i></a>
-                                        <ul class="sub-menu">
+                                    <li><a class="active" href="">Home <i class="fi-rs-angle-down"></i></a>
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="index.html">Home 1</a></li>
                                             <li><a href="index-2.html">Home 2</a></li>
                                             <li><a href="index-3.html">Home 3</a></li>
                                             <li><a href="index-4.html">Home 4</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li>
                                         <a href="page-about.html">About</a>
                                     </li>
-                                    <li><a href="shop-grid-right.html">Shop <i class="fi-rs-angle-down"></i></a>
+                                    <!-- <li><a href="shop-grid-right.html">Shop <i class="fi-rs-angle-down"></i></a>
                                         <ul class="sub-menu">
                                             <li><a href="shop-grid-right.html">Shop Grid – Right Sidebar</a></li>
                                             <li><a href="shop-grid-left.html">Shop Grid – Left Sidebar</a></li>
@@ -543,9 +538,9 @@
                                             <li><a href="shop-checkout.html">Shop – Checkout</a></li>
                                             <li><a href="shop-compare.html">Shop – Compare</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li class="position-static"><a href="#">Mega menu <i class="fi-rs-angle-down"></i></a>
-                                        <ul class="mega-menu">
+                                        <!-- <ul class="mega-menu">
                                             <li class="sub-mega-menu sub-mega-menu-width-22">
                                                 <a class="menu-title" href="#">Women's Fashion</a>
                                                 <ul>
@@ -599,10 +594,10 @@
                                                     </div>
                                                 </div>
                                             </li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="blog-category-grid.html">Blog <i class="fi-rs-angle-down"></i></a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="blog-category-grid.html">Blog Category Grid</a></li>
                                             <li><a href="blog-category-list.html">Blog Category List</a></li>
                                             <li><a href="blog-category-big.html">Blog Category Big</a></li>
@@ -614,10 +609,10 @@
                                                     <li><a href="blog-post-fullwidth.html">No Sidebar</a></li>
                                                 </ul>
                                             </li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="#">Pages <i class="fi-rs-angle-down"></i></a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="page-about.html">About Us</a></li>
                                             <li><a href="page-contact.html">Contact</a></li>
                                             <li><a href="page-account.html">My Account</a></li>
@@ -626,7 +621,7 @@
                                             <li><a href="page-privacy-policy.html">Privacy Policy</a></li>
                                             <li><a href="page-terms.html">Terms of Service</a></li>
                                             <li><a href="page-404.html">404 Page</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li>
                                         <a href="page-contact.html">Contact</a>
