--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -1,10 +1,7 @@
 <%- include("../../views/partials/admin/header") %>
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 
-
-   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cropperjs/dist/cropper.min.css"> -->
 </head>
 <style>
    .error-message{
@@ -24,191 +21,7 @@
 
        }
 </style>
-   <!-- <section class="content-main">
-       <div class="row">
-           <div class="col-9">
-               <div class="content-header">
-                   <h2 class="content-title">Add New Product</h2>
-               </div>
-           </div>
-           <div class="col-lg-6">
-               <div class="card mb-4">
-                   <div class="card-body">
-                       <form method="post" action="/admin/addProducts" enctype="multipart/form-data"
-                           onsubmit="return validateForm()">
-                           <div class="mb-4">
-                               <label for="product_name" class="form-label">Product Name</label>
-                               <input type="text" placeholder="Type here" name="productName"
-                                   class="form-control border" id="product_name">
-                               <div id="productName-error" class="error-message"></div>
-                           </div>
-                           <div class="col-lg-4 mb-4">
-                               <label class="form-label">Brand</label>
-                               <select class="form-select border" name="brand">
-                                   <%for(let i=0;i<brand.length;i++){%>
-                                
-                                       <option value="<%=brand[i].brandName%>">
-                                        
-                                        <%=brand[i].brandName%>
-
-                                       </option>
-
-                                       <%}%>
-                                       
-                                     
-                               </select>
-                               <div id="brand-error" class="error-message"></div>
-                           </div>
-                           <div class="mb-4">
-                               <label class="form-label">Full description</label>
-                               <textarea placeholder="Type here" id="descriptionid" name="description" class="form-control border"
-                                   rows="4"></textarea>
-                               <div id="description-error" class="error-message"></div>
-                           </div>
-                           <div class="row">
-                               <div class="col-lg-4">
-                                   <div class="mb-4">
-                                       <label class="form-label">Regular price</label>
-                                       <input placeholder="$" name="regularPrice" type="text"
-                                           class="form-control border">
-                                           <div id="regularPrice-error" class="error-message"></div>
-                                   </div>
-                               </div>
-                               <div class="col-lg-4">
-                                   <div class="mb-4">
-                                       <label class="form-label">Sale price</label>
-                                       <input placeholder="$" name="salePrice" type="text" class="form-control border">
-                                      
-                                   </div>
-                                   <div id="salePrice-error" class="error-message"></div>
-                               </div>
-                               <div class="col-lg-4">
-                                   <div class="mb-4">
-                                       <label class="form-label">Quantity</label>
-                                       <input placeholder="" name="quantity" type="text" class="form-control border">
-                                       <div id="quantity-error" class="error-message"></div>
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="row">
-                              
-                               <div class="col-lg-4">
-                                   <div class="mb-4">
-                                       <label class="form-label">Color</label>
-                                       <input  name="color" type="text" class="form-control border">
-                                   </div>
-                                   <div id="color-error" class="error-message"></div>
-                               </div>
-                            
-                           </div>
-                           <div class="card mb-4">
-                               <div class="card-body">
-                                   <div class="row gx-2">
-                                       <div class="col-sm-6 mb-3">
-                                           <label class="form-label">Category</label>
-                                           <select class="form-select border" style="width: 150px;" name="category">
-                                               
-
-                                            <%for(let i=0;i<cat.length;i++){%>
-
-                                                   <option value="<%=cat[i].name%>">
-                                                    <%=cat[i].name%>
-                                                       
-                                                   </option>
-                                                  
-                                                 <%}%>
-                                                   
-                                           </select>
-                                           <div id="category-error" class="error-message"></div>
-                                       </div>
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="card mb-2">
-                               <div class="card-header">
-                                   <h4>Choose images</h4>
-                               </div>
-                               <div class="border row">
-                                   <div id="addedImagesContainer" class="thumbnails-container"></div>
-                               </div>
-                               <div class="row">
-                                   <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                       <img src="" alt="" id="imgView1">
-                                                                   <input class="form-control" type="file" name="images" id="input1"
-                                                                       accept="image/png, image/jpeg, image/jpg"
-                                                                       onchange="viewImage1(event), viewImage(event, 1)">
-                                                                       <div id="images-error" class="error-message"></div>
-                                                               </div>
-                                                               <div class="image-cropper d-flex align-items-center"
-                                                                   style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                                   <img src="" id="croppedImg1" alt="">
-                                                                   <button type="button" id="saveButton1" class="btn-sm btn-primary">Save</button>
-                                                               </div>
-                                                           </div>
-                                                          
-                                                           <div class="row">
-                                                               <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                                                   <img src="" alt="" id="imgView2">
-
-
-                                                                   <input class="form-control" type="file" name="images" id="input2"
-                                                                       accept="image/png, image/jpeg, image/jpg"
-                                                                       onchange="viewImage2(event),viewImage(event, 2)">
-                                                               </div>
-                                                               <div class="image-cropper d-flex align-items-center"
-                                                                   style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                                   <img src="" id="croppedImg2" alt="">
-                                                                   <button type="button" id="saveButton2" class="btn-sm btn-primary">Save</button>
-                                                               </div>
-                                                           </div>
-                                                          
-                                                           <div class="row">
-                                                               <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                                                   <img src="" alt="" id="imgView3">
-
-
-                                                                   <input class="form-control" type="file" name="images" id="input3"
-                                                                       accept="image/png, image/jpeg, image/jpg"
-                                                                       onchange="viewImage3(event),viewImage(event, 3)">
-                                                               </div>
-                                                               <div class="image-cropper d-flex align-items-center"
-                                                                   style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                                   <img src="" id="croppedImg3" alt="">
-                                                                   <button type="button" id="saveButton3" class="btn-sm btn-primary">Save</button>
-                                                               </div>
-                                                           </div>
-                                                          
-                                                           <div class="row">
-                                                               <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                                                   <img src="" alt="" id="imgView4">
-
-
-                                                          
-                                                                   <input class="form-control" type="file" name="images" id="input4"
-                                                                       accept="image/png, image/jpeg, image/jpg"
-                                                                       onchange="viewImage4(event),viewImage(event, 4)">
-                                                               </div>
-                                                               <div class="image-cropper d-flex align-items-center"
-                                                                   style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                                   <img src="" id="croppedImg4" alt="">
-                                                                   <button type="button" id="saveButton4" class="btn-sm btn-primary">Save</button>
-                                                               </div>
-                                                           </div>
-                          
-                                                       </div>
-                           </div>
-                           <div>
-                               <button class="btn btn-md rounded font-sm hover-up"  type="button" onclick="validateAndSubmit()
-">Publish</button>
-                           </div>
-                       </form>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </section> -->
-
-
+  
    <section class="content-main">
     <div class="row">
         <div class="col-9">
@@ -249,7 +62,7 @@
                             <div class="col-lg-4">
                                 <div class="mb-4">
                                     <label class="form-label">Regular Price</label>
-                                    <input placeholder="$" name="regularPrice" type="number"
+                                    <input placeholder="₹" name="regularPrice" type="number"
                                         class="form-control border" required>
                                     <div id="regularPrice-error" class="error-message"></div>
                                 </div>
@@ -257,7 +70,7 @@
                             <div class="col-lg-4">
                                 <div class="mb-4">
                                     <label class="form-label">Sale Price</label>
-                                    <input placeholder="$" name="salePrice" type="number"
+                                    <input placeholder="₹" name="salePrice" type="number"
                                         class="form-control border">
                                     <div id="salePrice-error" class="error-message"></div>
                                 </div>
@@ -297,7 +110,7 @@
                                 <div class="card-body align-items-center" style="margin-bottom: 20px;">
                                     <label class="form-label">Image <%= i %></label>
                                     <input class="form-control" type="file" name="images" id="input<%= i %>"
-                                        accept="image/png, image/jpeg, image/jpg" onchange="viewImage(event, <%= i %>)">
+                                        accept="image/png, image/jpeg, image/jpg, image/webp" onchange="viewImage(event, <%= i %>)">
                                     <div class="image-cropper d-flex align-items-center mt-3" style="display: none;" id="cropper<%= i %>">
                                         <img src="" id="croppedImg<%= i %>" alt="" class="me-3" style="max-width: 150px;">
                                         <button type="button" class="btn btn-sm btn-primary" onclick="saveImage(<%= i %>)">Save</button>
@@ -317,7 +130,7 @@
     </div>
 </section>
 
-<!-- <script src="https://cdn.jsdelivr.net/npm/cropperjs/dist/cropper.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
      <script>
 
     function validateAndSubmit(){
@@ -342,50 +155,7 @@
             document.getElementById("imgView4").src = URL.createObjectURL(event.target.files[0])
         }
 
-    //     function viewImage(event,index){
-    //         let input = event.target;
-    //         let reader = new FileReader();
-    //         reader.onload = function(){
-    //         let dataURL = reader.result;
-    //         let image = document.getElementById("imgView"+index);
-    //         image.src = dataURL;
-    //         let cropper = new cropper(image,{
-    //             aspectRatio:1,
-    //             viewMode:1,
-    //             guides:true,
-    //             background:false,
-    //             autoCropArea:1,
-    //             zoomable:true
-    //         })
-
-    //         let cropperContainer = document.querySelector("#croppedImg" + index).parentNode;
-    //         cropperContainer.style.display = 'block';
-
-    //         let saveButton = document.querySelector('#saveButton' + index);
-    //         saveButton.addEventListener('click',async function (){
-
-    //             let croppedCanvas = cropped.getCroppedCanvas();
-    //             let croppedImage = document.getElementById("croppedImg" + index);
-    //             croppedImage.src = croppedCanvas.toDataURL('image/jpeg',1.0);
-                
-    //             let timestamp = new Date().getTime();
-    //             let fileName = `cropped-img-${timestamp}-${index}.png`;
-
-    //             await croppedCanvas.toBlob(blob=>{
-    //                 let input = document.getElementById('input'+ index);
-    //                 let imgFile = new File([blob],fileName,blob)
-    //                 const fileList = new DataTransfer();
-    //                 fileList.items.add(imgFile);
-    //                 input.files = fileList.files
-    //             });
-    //             cropperContainer.style.display = 'none';
-    //             cropper.distroy()
-    //         })
-    //     }
-    //     reader.readAsDataURL(input.files[0]);
-    // }
-
-    //--------------------------------------------------------------------
+   
     let croppers = {};
 
 function viewImage(event, index) {
@@ -448,7 +218,8 @@ function saveImage(index) {
             cropperContainer.style.display = 'none';
         }
     }
-//-----------------------------------------------------------------
+
+
     const selectedImages =[];
     document.getElementById("input1").addEventListener("change",handleFileSelect);
    
@@ -487,7 +258,6 @@ function saveImage(index) {
 
     }
 
-
         function validateForm() {
               clearErrorMessages();
               const name = document.getElementsByName('productName')[0].value;
@@ -516,22 +286,16 @@ function saveImage(index) {
       isValid = false;
    }
   
-  
-           
               if ( parseInt(quantity) < 0) {
                   displayErrorMessage('quantity-error', 'Please enter a valid non-negative quantity.');
                   isValid = false;
               }
   
   
-  
-  
               if (!/^\d+(\.\d{1,2})?$/.test(price) || parseFloat(price) < 0) {
                   displayErrorMessage('regularPrice-error', 'Please enter a valid non-negative price.');
                   isValid = false;
               }
-  
-  
   
   
               if (!/^\d+(\.\d{1,2})?$/.test(saleprice) || parseFloat(saleprice) < 0) {
@@ -572,13 +336,10 @@ function saveImage(index) {
               });
               const errorMessage = document.getElementById('errorMessage');
   
-  
           }
 
-
-
      </script>
-<%- include("../../views/partials/admin/footer") %>
+
 
 
 
