--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -32,7 +32,7 @@
         </thead>
         <tbody>
 
-            <%for(let i=data.length-1;i>=0;i--){%>
+            <!-- <%for(let i=data.length-1;i>=0;i--){%>
                 
             <tr>
                 <td><%=data[i].productName%></td>
@@ -40,19 +40,24 @@
                 <td><%=data[i].category.name%></td>
                 <td><%=data[i].salePrice%></td>
                 <td>
+                    <%if(locals.data[i].productOffer){%>
+                        <%=data[i].productOffer%>
+                        <%}else{%>
+                            0%
+                            <%}%>
                 </td>
                 <td>
-                
-                    <button class="btn btn-info" onclick="" style="width: 100px;">
+                <%if(locals.data[i].productOffer===0){%>
+                    <button class="btn btn-info" onclick="addOffer('<%=data[i]._id%>')" style="width: 100px;">
                         <a href="#" class="text-white">Add Offer</a>
                     </button>
-        
-                    <button class="btn btn-info" onclick="" style="width: 100px;">
+                 <%}else{%>
+                    <button class="btn btn-info" onclick="removeOffer('<%=data[i]._id%>')" style="width: 100px;">
                         <a href="#" class="text-white">Remove</a>
                     </button>
-                
+                <%}%>
                 </td>
-                <td></td>
+                <td><%=data[i].quantity%></td>
                 <td>
                 
                     <button class="btn btn-danger" style="width: 80px;">
@@ -70,7 +75,59 @@
                     </button>
                 </td>
             </tr>
-            <%}%>
+            <%}%> -->
+
+
+
+            <% for (let i = data.length - 1; i >= 0; i--) { %>
+                <tr>
+                    <td><%= data[i].productName %></td>
+                    <td><%= data[i].brand %></td>
+                    <td><%= data[i].category.name %></td>
+                    <td><%= data[i].salePrice %></td>
+                    <td>
+                        <% if (data[i].productOffer) { %>
+                            <%= data[i].productOffer %>
+                        <% } else { %>
+                            0%
+                        <% } %>
+                    </td>
+                    <td>
+                        <% if (!data[i].productOffer || data[i].productOffer === 0) { %>
+                            <button class="btn btn-info" onclick="addOffer('<%= data[i]._id %>')" style="width: 100px;">
+                                Add Offer
+                            </button>
+                        <% } else { %>
+                            <button class="btn btn-info" onclick="removeOffer('<%= data[i]._id %>')" style="width: 100px;">
+                                Remove
+                            </button>
+                        <% } %>
+                    </td>
+                    <td><%= data[i].quantity %></td>
+                    <td>
+                        <%if(data[i].isBlocked===false){%>
+                        <button class="btn btn-danger" style="width: 80px;">
+                            <a href="/admin/blockProduct?id=<%= data[i]._id %>" class="text-white" style="text-decoration: none;">Block</a>
+                        </button>
+
+                        <%}else{%>
+                        <button class="btn btn-success" style="width: 80px;">
+                    <a href="/admin/unblockProduct?id=<%= data[i]._id %>" class="text-white" style="text-decoration: none;">Unblock</a>
+
+                        </button>
+                        <%}%>
+                    </td>
+                    <td>
+                        <!-- <button class="btn btn-info" style="width: 80px;"> -->
+                            <a href="/admin/editProduct?id=<%= data[i]._id %>" class="btn btn-info" style="width: 80px;">Edit</a>
+                        <!-- </button> -->
+                    </td>
+                </tr>
+                <% } %>
+                
+
+
+
         </tbody>
 
     </table>
@@ -98,4 +155,161 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+<script>
+
+// async function addOffer(productId){
+
+//     const {value:amount} = await Swal.fire({
+//     tittle:'Offer in percentage',
+//     input:'number',
+//     inputLabel:'percentage',
+//     inputPlaceholder:'%'
+//     })
+
+//     $.ajax({
+//         url:"/admin/addProductOffer",
+//         method:'post',
+//         data:{
+//             percentage:amount,
+//             productId:productId
+//         },
+//         success:(response)=>{
+//             if(response.status===true){
+//                 location.reload()
+//                 Swal.fire('Offer added','The offer has been removed','success')
+//             }else{
+//                 alert("failed")
+//             }
+//         }
+//     })
+
+// }
+
+// async function removeOffer(productId) {
+   
+//     try {
+//         Swal.fire({
+//             tittle:"Remove offer",
+//             text:"Are you sure you want to remove this offer",
+//             icon:'warning',
+//             showCancelButton:true,
+//             confirmButtonColor:'#3085d6',
+//             cancelButtonColor:'d33',
+//             confirmButtonText:'Yes, remove it!',
+//             timer:5000,
+//             timerProgressBar:true
+//         }).then(async (result)=>{
+//             if(result.isConfirmed){
+//                 $.ajax({
+//                     url:"/admin/removeProductOffer",
+//                     method:'post',
+//                     data:{
+//                         productId:productId
+//                     },
+//                     success:(response)=>{
+//                         if(response.status===true){
+//                             Swal.fire('Removed!','The offer has been removed','success');
+//                             location.reload()
+//                         }else if(response.status === false){
+//                             Swal.fire('failed');
+
+//                         }else{
+//                             alert('failed')
+//                         }
+//                     }
+//                 })
+//             }
+//         })
+//     } catch (error) {
+        
+//         console.error(error)
+//     }
+// }
+
+
+async function addOffer(productId) {
+    try {
+        const { value: amount } = await Swal.fire({
+            title: 'Offer in percentage',
+            input: 'number',
+            inputLabel: 'Percentage',
+            inputPlaceholder: '%',
+            inputAttributes: {
+                min: 1,
+                max: 100,
+            },
+            confirmButtonText: 'Add Offer',
+            showCancelButton: true,
+        });
+
+        if (!amount || amount <= 0 || amount > 100) {
+            Swal.fire('Invalid Input', 'Please enter a valid percentage (1-100).', 'error');
+            return;
+        }
+
+        $.ajax({
+            url: "/admin/addProductOffer",
+            method: 'post',
+            data: {
+                percentage: amount,
+                productId: productId
+            },
+            success: (response) => {
+                if (response.status === true) {
+                    Swal.fire('Offer Added', 'The offer has been successfully added.', 'success')
+                        .then(() => location.reload());
+                } else {
+                    Swal.fire('Failed', response.message || 'Failed to add offer.', 'error');
+                }
+            },
+            error: (xhr, status, error) => {
+                Swal.fire('Error', 'An error occurred while adding the offer.', 'error');
+                console.error(error);
+            }
+        });
+    } catch (error) {
+        console.error(error);
+    }
+}
+
+async function removeOffer(productId) {
+    try {
+        const result = await Swal.fire({
+            title: "Remove Offer",
+            text: "Are you sure you want to remove this offer?",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, remove it!',
+        });
+
+        if (result.isConfirmed) {
+            $.ajax({
+                url: "/admin/removeProductOffer",
+                method: 'post',
+                data: {
+                    productId: productId
+                },
+                success: (response) => {
+                    if (response.status === true) {
+                        Swal.fire('Removed!', 'The offer has been removed.', 'success')
+                            .then(() => location.reload());
+                    } else {
+                        Swal.fire('Failed', response.message || 'Failed to remove offer.', 'error');
+                    }
+                },
+                error: (xhr, status, error) => {
+                    Swal.fire('Error', 'An error occurred while removing the offer.', 'error');
+                    console.error(error);
+                }
+            });
+        }
+    } catch (error) {
+        console.error(error);
+    }
+}
+
+</script>
 <%- include("../../views/partials/admin/footer") %>
