--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -168,6 +168,17 @@
     font-size: 0.8rem;
     margin-top: 5px;
   }
+  .forgot-password-link{
+    font-size: 0.875rem;
+    color:#007bff;
+    text-decoration: none;
+
+  }
+
+  .forgot-password-link:hover{
+    color: #0056b3;
+    text-decoration: underline;
+  }
 </style>
   
   
@@ -189,6 +200,9 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password" id="password" placeholder="Password" />
               <div id="error2" class="error-message"></div>
+            </div>
+            <div class="form-group d-flex justify-content-end">
+              <a href="/forgot-password" class="forgot-password-link ms-auto">Forgot Password</a>
             </div>
             <%if(locals.message && message.length>0){%>
               <div class="alert alert-danger text-center">
