--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -106,43 +106,43 @@ function validateForm(event) {
         return false;
     }
 
-    // Password validation
-    // if (password.length < 6) {
-    //     Swal.fire({
-    //         icon: 'error',
-    //         title: 'Weak Password',
-    //         text: 'Password must be at least 6 characters long.'
-    //     });
-    //     return false;
-    // }
+    //Password validation
+    if (password.length < 6) {
+        Swal.fire({
+            icon: 'error',
+            title: 'Weak Password',
+            text: 'Password must be at least 6 characters long.'
+        });
+        return false;
+    }
 
-    // if (!/[A-Z]/.test(password)) {
-    //     Swal.fire({
-    //         icon: 'error',
-    //         title: 'Weak Password',
-    //         text: 'Password must contain at least one uppercase letter.'
-    //     });
-    //     return false;
-    // }
+    if (!/[A-Z]/.test(password)) {
+        Swal.fire({
+            icon: 'error',
+            title: 'Weak Password',
+            text: 'Password must contain at least one uppercase letter.'
+        });
+        return false;
+    }
 
-    // if (!/[0-9]/.test(password)) {
-    //     Swal.fire({
-    //         icon: 'error',
-    //         title: 'Weak Password',
-    //         text: 'Password must contain at least one number.'
-    //     });
-    //     return false;
-    // }
+    if (!/[0-9]/.test(password)) {
+        Swal.fire({
+            icon: 'error',
+            title: 'Weak Password',
+            text: 'Password must contain at least one number.'
+        });
+        return false;
+    }
 
-    // // Confirm Password validation
-    // if (password !== confirmPassword) {
-    // Swal.fire({
-    //     icon: 'error',
-    //     title: 'Password Mismatch',
-    //     text: 'Passwords do not match.'
-    // });
-    //return false;
-//}
+    // Confirm Password validation
+    if (password !== confirmPassword) {
+    Swal.fire({
+        icon: 'error',
+        title: 'Password Mismatch',
+        text: 'Passwords do not match.'
+    });
+    return false;
+}
 
 // Allow form submission
 Swal.fire({
