--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -38,11 +38,14 @@
 
 
                     <div class="card-body">
-                        <form method="post" action="/admin/updateProduct/_id=<%=product._id%>"
-                            enctype="multipart/form-data" onsubmit="validateForm()">
+                        <form method="post" action="/admin/editProduct/<%= product._id %>"
+
+                            enctype="multipart/form-data" onsubmit=" return validateForm()">
+
                             <div class="mb-4">
                                 <label for="product_name" class="form-label">Product Name</label>
-                                <input type="text" name="productName" value="<%=product.productName%>"
+                                <!-- <input type="text" name="productName" value="<%=product.productName%>" -->
+                                <input type="text" name="productName" value="<%= product.productName %>" 
                                     class="form-control border" id="product_name">
                                 <div id="productName-error" class="error-message"></div>
                             </div>
@@ -136,7 +139,7 @@
                                                     <input type="hidden" value="<%product.productImages[i]%>"
                                                         id="imageDatas">
                                                     <img class="rounded" style="width: 50px; height: 60px;"
-                                                        src="/asset/login/<%=product.productImages[i]%>" alt="">
+                                                        src="/assets/login/<%=product.productImages[i]%>" alt="">
                                                     <h1> <i onclick="deleteSingleImage('<%=product.productImages[i]%>','<%=product._id%>')"
                                                             style="position: absolute; margin-left: .5rem; cursor: pointer; color: black;"
                                                             class="fa-thin fa-x">
@@ -266,8 +269,6 @@
             }
 
 
-
-
             //    if (!/^\d+(\.\d{1,2})?$/.test(price) || parseFloat(price) < 0) {
             //        displayErrorMessage('regularPrice-error', 'Please enter a valid non-negative price.');
             //        isValid = false;
@@ -304,8 +305,6 @@
 
 
         }
-
-
 
 
         function viewImage1(event) {
@@ -444,7 +443,4 @@
 
     </script>
 
-    <%- include("../partials/admin/footer.ejs") %> 
-
-
-    
+    <%- include("../partials/admin/footer.ejs") %>
