--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -290,25 +290,29 @@
                 <div class="tab-content wow fadeIn animated" id="myTabContent">
                     <div class="tab-pane fade show active" id="tab-one" role="tabpanel" aria-labelledby="tab-one">
                         <div class="row product-grid-4">
-                            <% for (let i = 0; i < products.length; i++) { %>
+                            <% for (let i=0; i < products.length; i++) { %>
                                 <div class="col-lg-3 col-md-4 col-12 col-sm-6">
                                     <div class="product-cart-wrap mb-30">
                                         <div class="product-img-action-wrap">
                                             <div class="product-img product-img-zoom">
                                                 <a href="/productDetails?id=<%= products[i]._id %>">
-                                         <!-- <img class="default-img" src="/public/assets/product-images/ products[i].productImages[0] %>" alt="<%= products[i].productName %>"> -->
-                                         <img class="default-img" src="/assets/login/<%= products[i].productImages[0] %>" alt="<%= products[i].productName %>">
+                                                    <img class="default-img"
+                                                        src="/assets/login/<%= products[i].productImages[0] %>"
+                                                        alt="<%= products[i].productName %>">
 
                                                 </a>
                                             </div>
                                             <div class="product-action-1">
-                                                <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal">
+                                                <a aria-label="Quick view" class="action-btn hover-up"
+                                                    data-bs-toggle="modal" data-bs-target="#quickViewModal">
                                                     <i class="fi-rs-eye"></i>
                                                 </a>
-                                                <a aria-label="Add To Wishlist" class="action-btn hover-up" href="/addToWishlist?id=<%= products[i]._id %>">
+                                                <a aria-label="Add To Wishlist" class="action-btn hover-up"
+                                                    href="/addToWishlist?id=<%= products[i]._id %>">
                                                     <i class="fi-rs-heart"></i>
                                                 </a>
-                                                <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html">
+                                                <a aria-label="Compare" class="action-btn hover-up"
+                                                    href="shop-compare.html">
                                                     <i class="fi-rs-shuffle"></i>
                                                 </a>
                                             </div>
@@ -318,18 +322,30 @@
                                         </div>
                                         <div class="product-content-wrap">
                                             <div class="product-category">
-                                                <a href="shop-grid-right.html"><%= products[i].brand %></a>
+                                                <a href="shop-grid-right.html">
+                                                    <%= products[i].brand %>
+                                                </a>
                                             </div>
-                                            <h2><a href="shop-product-right.html"><%= products[i].productName %></a></h2>
+                                            <h2><a href="shop-product-right.html">
+                                                    <%= products[i].productName %>
+                                                </a></h2>
                                             <div class="rating-result" title="90%">
                                                 <span><span>90%</span></span>
                                             </div>
                                             <div class="product-price">
-                                                <span><%= products[i].salePrice %></span>
-                                                <span class="old-price"><%=products[i].regularPrice%></span>
+                                                <span>
+                                                    Price:₹<%= products[i].salePrice.toLocaleString('en-IN') %>
+                                                </span>
+                                                <span class="old-price">
+                                                    <%=products[i].regularPrice.toLocaleString('en-IN')%>
+                                                </span>
                                             </div>
+                                            <!-- <p> Price:₹<%=products[i].salePrice.toLocaleString('en-IN')%> <span
+                                                class="text-muted"><strike>₹<%=products[i].regularPrice.toLocaleString('en-IN')%></strike></span>
+                                    </p> -->
                                             <div class="product-action-1 show">
-                                                <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html">
+                                                <a aria-label="Add To Cart" class="action-btn hover-up"
+                                                    href="shop-cart.html">
                                                     <i class="fi-rs-shopping-bag-add"></i>
                                                 </a>
                                             </div>
@@ -337,103 +353,6 @@
                                     </div>
                                 </div>
                                 <% } %>
-
-                                <% for (let i = 0; i < products.length; i++) { %>
-                                    <div class="col-lg-3 col-md-4 col-12 col-sm-6">
-                                        <div class="product-cart-wrap mb-30">
-                                            <div class="product-img-action-wrap">
-                                                <div class="product-img product-img-zoom">
-                                                    <a href="/productDetails?id=<%= products[i]._id %>">
-                                             <!-- <img class="default-img" src="/public/assets/product-images/ products[i].productImages[0] %>" alt="<%= products[i].productName %>"> -->
-                                             <img class="default-img" src="/assets/login/<%= products[i].productImages[0] %>" alt="<%= products[i].productName %>">
-    
-                                                    </a>
-                                                </div>
-                                                <div class="product-action-1">
-                                                    <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal">
-                                                        <i class="fi-rs-eye"></i>
-                                                    </a>
-                                                    <a aria-label="Add To Wishlist" class="action-btn hover-up" href="/addToWishlist?id=<%= products[i]._id %>">
-                                                        <i class="fi-rs-heart"></i>
-                                                    </a>
-                                                    <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html">
-                                                        <i class="fi-rs-shuffle"></i>
-                                                    </a>
-                                                </div>
-                                                <div class="product-badges product-badges-position product-badges-mrg">
-                                                    <span class="hot">Hot</span>
-                                                </div>
-                                            </div>
-                                            <div class="product-content-wrap">
-                                                <div class="product-category">
-                                                    <a href="shop-grid-right.html"><%= products[i].brand %></a>
-                                                </div>
-                                                <h2><a href="shop-product-right.html"><%= products[i].productName %></a></h2>
-                                                <div class="rating-result" title="90%">
-                                                    <span><span>90%</span></span>
-                                                </div>
-                                                <div class="product-price">
-                                                    <span>$238.85</span>
-                                                    <span class="old-price">$245.8</span>
-                                                </div>
-                                                <div class="product-action-1 show">
-                                                    <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html">
-                                                        <i class="fi-rs-shopping-bag-add"></i>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <% } %>
-
-
-                                    <% for (let i = 0; i < products.length; i++) { %>
-                                        <div class="col-lg-3 col-md-4 col-12 col-sm-6">
-                                            <div class="product-cart-wrap mb-30">
-                                                <div class="product-img-action-wrap">
-                                                    <div class="product-img product-img-zoom">
-                                                        <a href="/productDetails?id=<%= products[i]._id %>">
-                                                 <!-- <img class="default-img" src="/public/assets/product-images/ products[i].productImages[0] %>" alt="<%= products[i].productName %>"> -->
-                                                 <img class="default-img" src="/assets/login/<%= products[i].productImages[0] %>" alt="<%= products[i].productName %>">
-        
-                                                        </a>
-                                                    </div>
-                                                    <div class="product-action-1">
-                                                        <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal">
-                                                            <i class="fi-rs-eye"></i>
-                                                        </a>
-                                                        <a aria-label="Add To Wishlist" class="action-btn hover-up" href="/addToWishlist?id=<%= products[i]._id %>">
-                                                            <i class="fi-rs-heart"></i>
-                                                        </a>
-                                                        <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html">
-                                                            <i class="fi-rs-shuffle"></i>
-                                                        </a>
-                                                    </div>
-                                                    <div class="product-badges product-badges-position product-badges-mrg">
-                                                        <span class="hot">Hot</span>
-                                                    </div>
-                                                </div>
-                                                <div class="product-content-wrap">
-                                                    <div class="product-category">
-                                                        <a href="shop-grid-right.html"><%= products[i].brand %></a>
-                                                    </div>
-                                                    <h2><a href="shop-product-right.html"><%= products[i].productName %></a></h2>
-                                                    <div class="rating-result" title="90%">
-                                                        <span><span>90%</span></span>
-                                                    </div>
-                                                    <div class="product-price">
-                                                        <span>$238.85</span>
-                                                        <span class="old-price">$245.8</span>
-                                                    </div>
-                                                    <div class="product-action-1 show">
-                                                        <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html">
-                                                            <i class="fi-rs-shopping-bag-add"></i>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <% } %>
 
                             </div>
                                 
