--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -214,30 +214,37 @@
                  aria-labelledby="address-tab"
                >
                  <div class="row">
-                
+
+                  <%if(userAddress){%>
+                <%userAddress.address.forEach((address)=>{%>
                    <div class="col-lg-6">
                      <div class="card mb-3 mb-lg-0">
                        <div class="card-header">
-                         <h5 class="mb-0"></h5>
+                         <h5 class="mb-0"><%=address.addressType%></h5>
                        </div>
 
 
                        <div class="card-body">
                          <address>
-                        
+                        <%=address.name%><br/>
+                        <%=address.city%><br/>
+                        <%=address.landMark%><br/>
+                        <%=address.state%><br/>
                         
                          </address>
-                         <p></p>
-                      
+                         <p><%=address.pincode%></p>
+                         <p><%=address.phone%></p>
+                         <p><%=address.altPhone%></p>
+
                          <div class="d-flex justify-content-between">
-                           <a href="#" class="btn-small">Edit</a>
-                           <a href="#" class="btn-small" onclick="">Delete</a>
+                           <a href="/editAddress?id=<%=address._id%>" class="btn-small">Edit</a>
+                           <a href="/deleteAddress?id=<%=address._id%>" class="btn-small" onclick="return confirm('Are you sure you want to delete this address')">Delete</a>
                          </div>
                         
                        </div>
                      </div>
                    </div>
-                
+                <%})%><%}else{%>
                    <div class="col-lg-6">
                      <div class="card mb-3 mb-lg-0">
                        <div class="card-header">
@@ -248,9 +255,9 @@
                        </div>
                      </div>
                    </div>
-              
+              <%}%>
                    <div>
-                     <a href="#">
+                     <a href="/addAddress">
                        <button class="btn btn-primary w-70">
                          Add address
                        </button>
