--- a/views/admin/newproduct.ejs
+++ b/views/admin/newproduct.ejs
@@ -57,8 +57,10 @@
 
                             <div class="mb-4">
                                 <label class="form-label">Full Description</label>
-                                <textarea placeholder="Type here" id="descriptionid" name="description"
-                                    class="form-control border" rows="4" required><%=product.description%></textarea>
+                                <!-- <textarea placeholder="Type here" id="descriptionid" name="description"
+                                    class="form-control border" rows="4" required><%=product.description%></textarea> -->
+                                    <input placeholder="Type here" id="descriptionid" value="<%=product.description%>" name="description"
+                                    class="form-control border" rows="4" >
                                 <div id="description-error" class="error-message"></div>
                             </div>
 
@@ -98,7 +100,7 @@
                                 <select class="form-select border" name="category" id="categorySelect" required onchange="updateVariantFields()">
                                     <option value="" disabled selected>Select Category</option>
                                         <% for (let i=0; i < cat.length; i++) { %>
-                                            <option value="<%= cat[i]._id %>|<%= cat[i].type %>">
+                                            <option value="<%= cat[i]._id %> %>">
                                                 <%= cat[i].name %>
                                                 </option>
                                                     <% } %>
@@ -112,7 +114,7 @@
                                 <!-- Dynamic variant fields will be added here -->
                             </div>
 
-                            <!-- <div id="variantFields" class="mb-4">
+                            <div id="variantFields" class="mb-4">
                                 <% product.variants.forEach((variant, index) => { %>
                                     <div class="variant-container border p-3 mb-3" style="border-radius: 8px;">
                                         <% if (variant.categoryType === 'strength') { %>
@@ -152,7 +154,7 @@
                                         <button type="button" class="btn btn-danger btn-sm" onclick="removeVariant(this)">Remove Variant</button>
                                     </div>
                                 <% }); %>
-                            </div> -->
+                            </div>
 
 
 
